# autofeed

./: .env.example  README.md  SPEC.md  feeds.yaml  pyproject.toml
.github/workflows/: weekly.yml
digests/: 2026-W21.md  2026-W22.md  2026-W23.md  2026-W24.md  2026-W25.md  2026-W26.md
digests/state/: seen_urls.json
src/: dedup.py  digest.py  email.py  memory.py  models.py  ranker.py  render.py  sources.py
tests/: test_dedup.py  test_dedup_semantic.py  test_digest.py  test_email.py  test_memory.py  test_ranker_heuristic.py  test_ranker_llm.py  test_ranker_two_pass.py  test_render.py  test_sources.py
