[project]
name = "ai-digest"
version = "0.1.0"
description = "Weekly AI research digest — model-agnostic via LiteLLM"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "litellm>=1.50.0",
    "numpy>=1.26.0",
    "markdown>=3.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q"

[tool.uv]
package = false
